Updates spacing for icons and fixes bug where palette icon wasn't unselecting after choosing palette

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -27,7 +27,6 @@
   top: 100px;
   display: flex;
   flex-direction: row;
-  margin-right: 200px;
 }
 
 body {
